cambios en interzad, factoría y clases

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
     <title>Notas</title>
 </head>
 <body>
-    <div id="main_container">
-        hola
+    <div id="main-container">
     </div>
     <script type="module" src="js/index.js"></script>
 </body>
